--- a/admin/index.html
+++ b/admin/index.html
@@ -83,6 +83,8 @@
             <th>Author</th>
             <th>Date</th>
             <th>View</th>
+            <th>Delete</th>
+            <th>Update</th>
         </tr>
         </thead>
         <tbody id="table-body">
@@ -91,7 +93,7 @@
     </table>
 
     <div class="blog-rates">
-    	<div class="card" style="background: #dc3545 !important;">
+    	<!-- <div class="card" style="background: #dc3545 !important;">
     		<h3>
     			<span>
                     <i class="fa fa-trash" aria-hidden="true"></i>         
@@ -103,7 +105,7 @@
     		
     	</div>
     	
-    </div> 
+    </div>  -->
 	</div>
 
 
