changed logic on redirect

--- a/admin/index.html
+++ b/admin/index.html
@@ -61,7 +61,7 @@
                 <span><i class="fa-solid fa-user fax-3" aria-hidden="true"></i></span>
                 
             </h3>
-            <h1>Users <span>9</span></h1>
+            <h1 id="users">Users <span id="users-length"></span></h1>
         </div>
           <div class="card">
             <h3>
