--- a/register.html
+++ b/register.html
@@ -75,12 +75,8 @@
 
   <script>
      document.addEventListener('DOMContentLoaded', () => {
-        const savedUser = JSON.parse(localStorage.getItem('user-loggedin'))
-        if (!savedUser) {
-            return window.location="/register.html"
-        }else {
-            window.history.back()
-        }
+        const savedUser = JSON.parse(localStorage.getItem('user-loggedin')) 
+        if (savedUser) return window.history.back()
     })
   </script>
 
