got rid of alert boxes

--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,7 @@
 
     <div class="container flex flex-column">
       <div class="contact-form">
+         <div class="warning hidden"></div>
             <h1 class="text-md" style="color: #6F65FA; font-weight: 600; text-transform: capitalize;">get in touch</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque, illo!</p>
 
