--- a/register.html
+++ b/register.html
@@ -27,6 +27,7 @@
 
     <div class="container flex flex-column">
       <div class="contact-form login-form">
+         <div class="warning hidden"></div>
           <h1 class="text-md" style="color: #6F65FA; font-weight: 600; text-align: center; text-transform: capitalize;">Sign up</h1>
             <form id="signup-form">
                 <div class="form-control">
