--- a/login.html
+++ b/login.html
@@ -44,6 +44,8 @@
 
     <div class="container flex flex-column">
       <div class="contact-form login-form">
+        <div class="warning hidden"></div>
+        
           <h1 class="text-md" style="color: #6F65FA; font-weight: 600; text-align: center; text-transform: capitalize;">Login</h1>
             <form id="login-form">
                 <div class="form-control">
