--- a/admin/index.html
+++ b/admin/index.html
@@ -160,7 +160,7 @@
 
 <script>
   function logout() {
-    localStorage.removeItem('mybrand')
+    localStorage.removeItem('user-loggedin')
     return window.location.href = "/login.html"
   }
 </script>
