--- a/admin/index.html
+++ b/admin/index.html
@@ -14,7 +14,7 @@
 			<div class="right-nav">	
 				<ul>
 					<li><a href="">Dashboard</a></li>
-					<li><a href="">Blogs</a></li>
+					<li><a href="../blog.html">Blogs</a></li>
 				</ul>
 			</div>
 
@@ -111,7 +111,7 @@
             </div>
              <div class="form-control">
               <label for="file">File</label>
-              <input type="file" id="password" />
+              <input type="file" id="blog-img" />
             </div>
             <div id="editor" style="height: 50vh"></div>
             <button type="submit" class="btn btn-dark">Post</button>
