--- a/contact.html
+++ b/contact.html
@@ -16,28 +16,28 @@
     <nav>
         <div class="container">
             <h1 class="navbar-brand">Fred.</h1>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="index.html#skills">Skills</a></li>
-                <li><a href="index.html#work">Work</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="login.html">Login</a></li>
-            </ul>
-        </div>
-    </nav>
-
-        <div class="mobile-nav ">
-        <div class="top-nav">
-              <ul class="menu show">
+            <ul class="menu show">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="login.html">Login</a></li>
+                <li><a href="login.html" class="login-user">Login</a></li>
+            </ul>
+        </div>
+    </nav>
+
+        <div class="mobile-nav ">
+        <div class="top-nav">
+              <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="login.html" class="login-user">Login</a></li>
             </ul> 
         </div>
      </div>
@@ -94,6 +94,7 @@
   <footer class="footer">
     <p>Fred &copy; <span id="year">2022</span></p>
   </footer>
+  
 
  <script src="js/main.js"></script>
 </body>
