--- a/register.html
+++ b/register.html
@@ -20,7 +20,7 @@
                 <li><a href="index.html#work">Work</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="login.html">Login</a></li>
+                <li><a href="login.html" class="login-user">Login</a></li>
             </ul>
         </div>
     </nav>
