--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,9 @@
      <button onclick="topFunction()" id="myBtn" title="Go to top">
          <i class="fa fa-arrow-up" aria-hidden="true"></i>
      </button>
+      <div class="menu-btn">
+        <i class="fas fa-bars fa-2x"></i>
+    </div>
     <nav>
         <div class="container">
             <h1 class="navbar-brand">Fred.</h1>
@@ -27,6 +30,20 @@
             </ul>
         </div>
     </nav>
+
+        <div class="mobile-nav ">
+        <div class="top-nav">
+              <ul class="menu show">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="login.html">Login</a></li>
+            </ul> 
+        </div>
+     </div>
 
     <h1 style="text-align: center; font-weight: 700;">Blogs</h1>
 
