--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="content">
             <h1 class="text-md">full stack developer</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius nobis temporibus pariatur animi fuga deserunt saepe accusamus eaque accusantium itaque?</p>
-            <button class="btn" type="button">Download CV</button>
+            <a href="Fred__resume.pdf" download class="btn" type="button">Download CV</a>
         </div>
         <div class="banner-image">
             <img src="images/code.jpg" alt="">
@@ -72,7 +72,7 @@
         <div class="socials flex flex-socials">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-github"></i></a>
+            <a href="https://github.com/hakizimana-fred"><i class="fa-brands fa-github"></i></a>
         </div>
     </div>
     </div>
@@ -135,8 +135,8 @@
   <div class="footer-socials">
     <div class="socials">
         <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-        <a href="#"><i class="fa-brands fa-github"></i></a>
+        <a href=""><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://github.com/hakizimana-fred"><i class="fa-brands fa-github"></i></a>
     </div>
   </div>
 
