--- a/admin/index.html
+++ b/admin/index.html
@@ -70,7 +70,7 @@
                 </span>
                 
             </h3>
-            <h1>Authors <span>1</span></h1>
+            <h1>Comments <span id="comments">1</span></h1>
         </div>
      </div>
 
