blog post validation

--- a/admin/index.html
+++ b/admin/index.html
@@ -48,6 +48,10 @@
 		</div>	
 	</div>
 
+  <div class="container">
+    <div class="warning hidden"></div>
+  </div>
+
      <div class="container flex">
          <div class="card">
             <h3>
